# FastMultiplication

./: .gitignore  CMakeLists.txt  Description  benchmark1.csv  rose  test1.txt
benchmarks/: CMakeLists.txt  benchmark.cpp  plot.py  requirements.txt
src/: BigInt.cpp  BigInt.hpp  CMakeLists.txt  FFTMultiplier.cpp  Image.hpp  ImageConvs.cpp  KaratsubaMultiplier.cpp  NaiveMultiplier.cpp  fft.cpp  main.cpp
tests/: BigIntTest.cpp  CMakeLists.txt  FFTMultTest.cpp  KaratsubaMultTest.cpp  NaiveMultTest.cpp  first_test.cpp
